--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "genildovsm/database",
+	"name": "genildovsm/php-database",
 	"description": "A simple library for build query",
 	"license": "GPL-3.0+",
 	"authors": [
